# LangGraph-MCP-Demo

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt
src/: a2a_client.py  a2a_client_agent.py  a2a_lang_graph_executor.py  a2a_server.py  a2a_server_agent.py  app.py  lang_graph_client.py  lang_graph_client_streamlit.py
src/client/: mcp_client.py
src/config/: mcp_server.json  mcp_server_external.json
src/graph/: state_graph.py
src/model/: agentstate.py
src/server/: mcp_server.py
