[project]
name = "langgraph-mcp-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.3.6",
    "chromadb>=1.1.0",
    "chromium>=0.0.0",
    "fastapi>=0.116.2",
    "fastmcp>=2.12.3",
    "graphviz>=0.21",
    "ipython>=9.5.0",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.76",
    "langchain-experimental>=0.3.4",
    "langchain-groq>=0.3.8",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-ollama>=0.3.8",
    "langchain-openai>=0.3.33",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.7",
    "langsmith>=0.4.28",
    "mcp-use>=1.3.10",
    "mcp[cli]>=1.14.1",
    "nest-asyncio>=1.6.0",
    "playwright>=1.55.0",
    "pydantic>=2.11.9",
    "pypdf>=6.0.0",
    "pyppeteer>=0.0.25",
    "python-dotenv>=1.1.1",
    "streamlit>=1.49.1",
    "uvicorn>=0.35.0",
]
